--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
           xmlns:cam="clr-namespace:WebcamControl;assembly=WebcamControl"
-        Title="Kraus GRA System" Height="714" Width="1228"
+        Title="Kraus GRA System" Height="1280" Width="800"
         Name="wndLogin" Loaded="wndLogin_Loaded" WindowState="Maximized" Icon="/KrausRGA;component/Images/RGAICO.ico" Closing="wndLogin_Closing">
 
 
@@ -10,13 +10,13 @@
 
         <Grid>
             <Border BorderThickness="2" BorderBrush="#FFD49919">
-                <Canvas Margin="-1,0,1,0" RenderTransformOrigin="0.965,0.968" Height="777" Width="1400" >
+                <Canvas Margin="-1,0,1,0" RenderTransformOrigin="0.965,0.968" Height="1280" Width="800" >
 
                     <Canvas.Background>
                         <ImageBrush ImageSource="/KrausRGA;component/Images/white.jpg"/>
                     </Canvas.Background>
 
-                    <Canvas x:Name="cnTitle" Height="100" Width="1400" Canvas.Left="2">
+                    <Canvas x:Name="cnTitle" Height="100" Width="798" Canvas.Left="2">
                         <Canvas.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="#FF686868" Offset="0.988"/>
@@ -31,56 +31,57 @@
                         </TextBlock>
                     </Canvas>
 
-                    <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Top="100" Background="#B2111111" Height="677">
-                        <Canvas Name="cnNewReturn" Width="340" Canvas.Top="128" >
-                            <StackPanel>
-                                <Canvas Height="117">
-                                    <Image Name="imgUser" Source="/KrausRGA;component/Images/UserIcon.png" Canvas.Left="10" Canvas.Top="36" Height="51" Width="60"></Image>
-                                    <TextBlock Name="txtUserName" Text="User not Logged." Foreground="WhiteSmoke" FontSize="20" Width="255" Canvas.Left="70" Canvas.Top="36" Height="51" />
-                                </Canvas>
-                                <Border Style="{StaticResource bdrWin8btn}"  Canvas.Top="140"  >
-                                    <StackPanel Orientation="Horizontal">
-                                        <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoEnterNumber.png" MouseDown="btnBoxNumber_Click"></Image>
-                                        <Button x:Name="btnPONumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Enter Number" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
-                                    </StackPanel>
-                                </Border>
-                                <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="225"  >
-                                    <StackPanel Orientation="Horizontal">
-                                        <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoScan.jpg" MouseDown="btnBoxNumber_Click"></Image>
-                                        <Button x:Name="btnBoxNumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Scan" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
-                                    </StackPanel>
-                                </Border>
-                                <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" >
-                                    <StackPanel Orientation="Horizontal">
-                                        <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoCam.png" MouseDown="btnCamera_Click" />
-                                        <Button x:Name="btnCamera" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Camera" Click="btnCamera_Click" />
-                                    </StackPanel>
-                                </Border>
-                                <Border  Style="{StaticResource bdrWin8btn}" >
-                                    <StackPanel Orientation="Horizontal">
-                                        <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSetting.png" MouseDown="btnNewScan_Click"/>
-                                        <Button x:Name="btnNewScan" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Application Setting" Click="btnNewScan_Click" />
-                                    </StackPanel>
-                                </Border>
-                                <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="395" >
-                                    <StackPanel Orientation="Horizontal">
-                                        <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoLogout.png" MouseDown="btnlogout_Click"></Image>
-                                        <Button x:Name="btnlogout" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Log Out" Click="btnlogout_Click"/>
-                                    </StackPanel>
-                                </Border>
-                                <TextBlock Name="tbFilenmae" TextWrapping="Wrap" Foreground="WhiteSmoke" Text="TextBlock"/>
-                            </StackPanel>
+                    <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Top="100" Background="#B2111111" Height="119" Width="800">
+
+                        <Canvas Name="cnNewReturn" Canvas.Top="128" >
+                            <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Auto" CanContentScroll="True" Width="800">
+                                <StackPanel Orientation="Horizontal">
+                                    <Canvas Height="117">
+                                        <Image Name="imgUser" Source="/KrausRGA;component/Images/UserIcon.png" Canvas.Left="10" Canvas.Top="36" Height="51" Width="60"></Image>
+                                        <TextBlock Name="txtUserName" Text="User not Logged." Foreground="WhiteSmoke" FontSize="20" Width="255" Canvas.Left="70" Canvas.Top="36" Height="51" />
+                                    </Canvas>
+                                    <Border Style="{StaticResource bdrWin8btn}"  Canvas.Top="140"  >
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoEnterNumber.png" MouseDown="btnBoxNumber_Click"></Image>
+                                            <Button x:Name="btnPONumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Enter Number" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
+                                        </StackPanel>
+                                    </Border>
+                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="225"  >
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoScan.jpg" MouseDown="btnBoxNumber_Click"></Image>
+                                            <Button x:Name="btnBoxNumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Scangun Scan" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
+                                        </StackPanel>
+                                    </Border>
+
+                                    <Border  Style="{StaticResource bdrWin8btn}" >
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSetting.png" MouseDown="btnNewScan_Click"/>
+                                            <Button x:Name="btnNewScan" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Application Setting" Click="btnNewScan_Click" />
+                                        </StackPanel>
+                                    </Border>
+                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="395" >
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoLogout.png" MouseDown="btnlogout_Click"></Image>
+                                            <Button x:Name="btnlogout" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Log Out" Click="btnlogout_Click"/>
+                                        </StackPanel>
+                                    </Border>
+                                </StackPanel>
+                            </ScrollViewer>
                         </Canvas>
                     </Border>
 
-                    <Border Name="bdrLogin" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="390" Canvas.Top="325" Width="750" CornerRadius="15" Background="#CC232121">
+                    <Border Name="bdrLogin" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="10" Canvas.Top="280" Width="750" CornerRadius="15" Background="#CC232121">
                         <Canvas>
                             <TextBlock Name="tbLoginText" Text="Please scan your badge" FontSize="20" Canvas.Left="188" Canvas.Top="71" Foreground="#FFE0E0E0" />
                             <TextBlock Name="tbTitleLogin" Style="{StaticResource tbFormTitle}"  Text="Login" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
                             <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395"  Background="White">
                                 <TextBox Name="txtLogin" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtLogin_KeyDown"/>
                             </Border>
-
+                            <Border Name="btnCameraScan" Visibility="Visible" CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="586" Canvas.Top="90" Width="74" Height="74" >
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoCam.png" MouseDown="btnCamera_Click" />
+                                </StackPanel>
+                            </Border>
                         </Canvas>
                     </Border>
 
@@ -92,11 +93,16 @@
                             <Border BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395" CornerRadius="10">
                                 <TextBox x:Name="txtScan" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtScan_KeyDown"/>
                             </Border>
+                            <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" CornerRadius="50" Width="78" Canvas.Left="594" Canvas.Top="89" >
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoCam.png" MouseDown="btnCamera_Click" />
+                                </StackPanel>
+                            </Border>
                         </Canvas>
                     </Border>
-                    <Border BorderThickness="1" Height="160" Canvas.Top="619" Width="1063" Canvas.Left="339">
+                    <Border BorderThickness="1" Height="160" Canvas.Top="1116" Width="800">
                         <Canvas>
-                            <Border Name="bdrMsg" BorderThickness="1" Height="50" Canvas.Left="0" Canvas.Top="108" Width="1061" Background="#E1007ACC">
+                            <Border Name="bdrMsg" BorderThickness="1" Height="50" Canvas.Left="0" Canvas.Top="108" Width="798" Background="#E1007ACC">
                                 <Border.Style >
                                     <Style TargetType="{x:Type Border}">
                                         <Style.Triggers>
@@ -126,6 +132,7 @@
                             </Border>
                         </Canvas>
                     </Border>
+
                 </Canvas>
             </Border>
 
