--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
           xmlns:cam="clr-namespace:WebcamControl;assembly=WebcamControl"
         Title="Kraus GRA System" Height="1280" Width="800"
-        Name="wndLogin" Loaded="wndLogin_Loaded" WindowState="Maximized" Icon="/KrausRGA;component/Images/RGAICO.ico" Closing="wndLogin_Closing">
+        Name="wndLogin" Loaded="wndLogin_Loaded" WindowState="Normal" Icon="/KrausRGA;component/Images/RGAICO.ico" Closing="wndLogin_Closing">
 
 
     <Viewbox >
@@ -31,46 +31,63 @@
                         </TextBlock>
                     </Canvas>
 
-                    <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" Canvas.Top="100" Background="#B2111111" Height="119" Width="800">
+                    <Border Name="bdrButtons" Style="{StaticResource trgBorderHideShow0 }" CornerRadius="20" Canvas.Top="100" Height="329" Width="798" Canvas.Left="2">
 
-                        <Canvas Name="cnNewReturn" Canvas.Top="128" >
-                            <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Auto" CanContentScroll="True" Width="800">
+                        <Canvas Name="cnNewReturn" Canvas.Top="128" Margin="0,0,-10,0" >
+                            <Border CornerRadius="20" Width="798" BorderThickness="0,3" BorderBrush="#FF517F95">
+                                <Border.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="#FF747476" Offset="0"/>
+                                        <GradientStop Color="#FF747476" Offset="1"/>
+                                        <GradientStop Color="#FF4B4B4B" Offset="0.793"/>
+                                        <GradientStop Color="#FF4B4B4B" Offset="0.305"/>
+                                    </LinearGradientBrush>
+                                </Border.Background>
+                                <Canvas Height="117" Width="790">
+                                    <Image Name="imgUser" Source="/KrausRGA;component/Images/UserIcon.png" Canvas.Left="10" Canvas.Top="36" Height="51" Width="60"></Image>
+                                    <TextBlock Name="txtUserName" Text="User not Logged." Foreground="WhiteSmoke" FontSize="20" Width="255" Canvas.Left="70" Canvas.Top="36" Height="51" />
+                                </Canvas>
+                            </Border>
+                            <Border CornerRadius="20" BorderThickness="0,3" BorderBrush="#FF517F95" Height="201" Width="798" Canvas.Top="122">
+                                <Border.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="#FF747476" Offset="0"/>
+                                        <GradientStop Color="#FF747476" Offset="1"/>
+                                        <GradientStop Color="#FF4B4B4B" Offset="0.793"/>
+                                        <GradientStop Color="#FF4B4B4B" Offset="0.305"/>
+                                    </LinearGradientBrush>
+                                </Border.Background>
+                                <Canvas Margin="0,-120,-303,120">
+                                <Border Style="{StaticResource bdrWin8btn}"  Canvas.Top="140" Canvas.Left="37"  >
                                 <StackPanel Orientation="Horizontal">
-                                    <Canvas Height="117">
-                                        <Image Name="imgUser" Source="/KrausRGA;component/Images/UserIcon.png" Canvas.Left="10" Canvas.Top="36" Height="51" Width="60"></Image>
-                                        <TextBlock Name="txtUserName" Text="User not Logged." Foreground="WhiteSmoke" FontSize="20" Width="255" Canvas.Left="70" Canvas.Top="36" Height="51" />
-                                    </Canvas>
-                                    <Border Style="{StaticResource bdrWin8btn}"  Canvas.Top="140"  >
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoEnterNumber.png" MouseDown="btnBoxNumber_Click"></Image>
-                                            <Button x:Name="btnPONumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Enter Number" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
-                                        </StackPanel>
-                                    </Border>
-                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="225"  >
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoScan.jpg" MouseDown="btnBoxNumber_Click"></Image>
-                                            <Button x:Name="btnBoxNumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Scangun Scan" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
-                                        </StackPanel>
-                                    </Border>
-
-                                    <Border  Style="{StaticResource bdrWin8btn}" >
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSetting.png" MouseDown="btnNewScan_Click"/>
-                                            <Button x:Name="btnNewScan" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Application Setting" Click="btnNewScan_Click" />
-                                        </StackPanel>
-                                    </Border>
-                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="395" >
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoLogout.png" MouseDown="btnlogout_Click"></Image>
-                                            <Button x:Name="btnlogout" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Log Out" Click="btnlogout_Click"/>
-                                        </StackPanel>
-                                    </Border>
+                                    <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoEnterNumber.png" MouseDown="btnBoxNumber_Click"></Image>
+                                    <Button x:Name="btnPONumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Enter Number" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
                                 </StackPanel>
-                            </ScrollViewer>
+                            </Border>
+                            <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="226" Canvas.Left="37"  >
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoScan.jpg" MouseDown="btnBoxNumber_Click"></Image>
+                                    <Button x:Name="btnBoxNumber" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Scangun Scan" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
+                                </StackPanel>
+                            </Border>
+                            <Border  Style="{StaticResource bdrWin8btn}" Canvas.Left="432" Canvas.Top="139" >
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSetting.png" MouseDown="btnNewScan_Click"/>
+                                    <Button x:Name="btnNewScan" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Application Setting" Click="btnNewScan_Click" />
+                                </StackPanel>
+                            </Border>
+                            <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="225" Canvas.Left="432" >
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoLogout.png" MouseDown="btnlogout_Click"></Image>
+                                    <Button x:Name="btnlogout" Style="{StaticResource ToolBarButtonBaseStyle}" Content="Log Out" Click="btnlogout_Click"/>
+                                </StackPanel>
+                            </Border>
+                            </Canvas>
+                            </Border>
                         </Canvas>
                     </Border>
 
-                    <Border Name="bdrLogin" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="10" Canvas.Top="280" Width="750" CornerRadius="15" Background="#CC232121">
+                    <Border Name="bdrLogin" Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="10" Canvas.Top="548" Width="750" CornerRadius="15" Background="#CC232121">
                         <Canvas>
                             <TextBlock Name="tbLoginText" Text="Please scan your badge" FontSize="20" Canvas.Left="188" Canvas.Top="71" Foreground="#FFE0E0E0" />
                             <TextBlock Name="tbTitleLogin" Style="{StaticResource tbFormTitle}"  Text="Login" Height="52" Width="124" Canvas.Left="8" Canvas.Top="8"/>
@@ -85,7 +102,7 @@
                         </Canvas>
                     </Border>
 
-                    <Border Name="bdrScan" Visibility="Hidden"  Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="1404" Canvas.Top="325" Width="750" CornerRadius="15"  Background="#CC232121">
+                    <Border Name="bdrScan" Visibility="Hidden"  Style="{StaticResource trgBorderHideShowTO390}" BorderBrush="#FF209DD8" BorderThickness="2,2,2,2" Height="265" Canvas.Left="841" Canvas.Top="548" Width="750" CornerRadius="15"  Background="#CC232121">
                         <Canvas>
                             <ProgressBar x:Name="pbrScanner" Height="55" Canvas.Top="98" Width="395" Foreground="#FF0DBB05" Background="White" BorderBrush="{x:Null}" Canvas.Left="188" />
                             <TextBlock x:Name="tbScanText" Text="Please Scan Barcode" FontSize="20" Canvas.Left="188" Canvas.Top="71" Foreground="WhiteSmoke"/>
